# Rust-Cross-Platform-Development

./: README.md
android-sample/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-sample/app/: build.gradle.kts
android-sample/app/src/main/: AndroidManifest.xml
android-sample/app/src/main/kotlin/com/fernandocejas/rust/: Cryptor.kt
android-sample/app/src/main/kotlin/com/fernandocejas/sample/: AndroidApplication.kt  Cryptor.kt  MainActivity.kt  MainFragment.kt  MainViewModel.kt
android-sample/app/src/main/kotlin/com/fernandocejas/sample/core/extension/: Context.kt
android-sample/app/src/main/kotlin/com/fernandocejas/sample/core/platform/: BaseFragment.kt
android-sample/app/src/main/res/layout/: fragment_main.xml
android-sample/app/src/main/res/values/: strings.xml
android-sample/buildSrc/src/main/kotlin/scripts/: compilation.gradle.kts
android-sample/gradle/: libs.versions.toml
backend-sample/: README.md
cli-sample/: README.md
desktop-sample/: README.md
ios-sample/: .gitignore  README.md
rust-library/: .gitignore  Cargo.toml  README.md  cargo-config.toml
rust-library/cryptor/: Cargo.toml
rust-library/cryptor-c/: Cargo.toml
rust-library/cryptor-c/src/: lib.rs
rust-library/cryptor-jni/: Cargo.toml  build.rs  config.rs  release.rs
rust-library/cryptor-jni/src/: lib.rs
rust-library/cryptor/src/: lib.rs
rust-library/cryptor/tests/: integration_tests.rs
rust-library/cryptor_c/: Cargo.toml
rust-library/cryptor_c/src/: lib.rs
rust-library/cryptor_global/: Cargo.toml
rust-library/cryptor_global/src/: console.rs  io.rs  lib.rs  system.rs
rust-library/cryptor_jni/: .gitignore  Cargo.toml  Settings.toml  build.rs  config.rs  release.rs
rust-library/cryptor_jni/src/: lib.rs
rust-library/cryptor_jni/tests/: build_test.rs  config_test.rs
web-sample/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
web-sample/src/: App.vue  main.ts
web-sample/src/components/: TheWelcome.vue
web-sample/src/main/: App.vue  main.ts
web-sample/src/main/core/router/: index.ts
web-sample/src/main/features/decryption/views/: DecryptionView.vue
web-sample/src/main/features/encryption/views/: Encryption.vue
web-sample/src/test/core/home/components/: AppHeader.spec.ts
