[package]
name = "cryptor-c"
version = "0.1.0"
authors = ["Fernando Cejas <fcejas@gmail.com>", "Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptor = { path = "../cryptor", version = "0.1" }
