[package]
name = "cryptor-jni"
version = "0.1.0"
authors = ["Fernando Cejas <fcejas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

# Dynamic Library: https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["dylib"]

[dependencies]
cryptor = { path = "../cryptor", version = "0.1" }
