[package]
name = "cryptor_c"
version = "0.1.0"
authors = ["Fernando Cejas <android10@fernandocejas.com>"]
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

# Dynamic Library. 
# See: https://doc.rust-lang.org/reference/linkage.html
# See: https://doc.rust-lang.org/cargo/reference/cargo-targets.html
[lib]
crate-type = ["dylib"]

[dependencies]
cryptor = { path = "../cryptor", version = "0.1.0" }
