[package]
name = "cryptor_jni"
version = "0.1.0"
authors = ["Fernando Cejas <fcejas@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

# Dynamic Library: https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cryptor = { path = "../cryptor", version = "0.1.0" }
cryptor_global = { path = "../cryptor_global", version = "0.1.0" }

[build-dependencies]
phf = { version = "0.8.0", features = ['macros'] }
serde = { version = '1.0.118', features = ['derive'] }
toml = "0.5"
cryptor_global = { path = "../cryptor_global", version = "0.1.0" }